@@ -279,7 +279,7 @@ public class DocumentBasedBasicMapTest extends TestCase {
   public void testPutOnEmptyMapIsReturnedByGet() {
     createEmptyMap();
     getTarget().put(KEY1, 10);
-    assertEquals(new Integer(10), getTarget().get(KEY1));
+    assertEquals(Integer.valueOf(10), getTarget().get(KEY1));
   }
 
   public void testPutOnEmptyMapInsertsIntoSubstrate() {
@@ -312,13 +312,13 @@ public class DocumentBasedBasicMapTest extends TestCase {
         .add(KEY2, 20));
 
     getTarget().put(KEY1, 05);
-    assertEquals(new Integer(05), getTarget().get(KEY1));
+    assertEquals(Integer.valueOf(05), getTarget().get(KEY1));
     assertSubstrateEquals(new ListBuilder<String, Integer>()
         .add(KEY1, 05)
         .add(KEY2, 20));
 
     getTarget().put(KEY1, 30);
-    assertEquals(new Integer(30), getTarget().get(KEY1));
+    assertEquals(Integer.valueOf(30), getTarget().get(KEY1));
     assertSubstrateEquals(new ListBuilder<String, Integer>()
         .add(KEY1, 30)
         .add(KEY2, 20));
@@ -334,7 +334,7 @@ public class DocumentBasedBasicMapTest extends TestCase {
     removeEntries(KEY1);
     addEntry(KEY1, 10);
 
-    assertEquals(new Integer(10), getTarget().get(KEY1));
+    assertEquals(Integer.valueOf(10), getTarget().get(KEY1));
     assertSubstrateEquals(new ListBuilder<String, Integer>()
         .add(KEY1, 10)
         .add(KEY2, 20));
